# afkost

./: .gitignore  README.md  pyproject.toml  setup.cfg
_uniprot/: _proteomes.txt
examples/: example.py  reciprocalbest.py  trypidrs.py  tryplcds.py  tryptag.py
src/afkost/: __init__.py  afkost.py  test.py
src/afkost/blast/: __init__.py  blast.py
src/afkost/databases/: databases.py
src/afkost/tritrypdb/: __init__.py  tritrypdb.py
src/afkost/uniprot/: __init__.py  uniprot.py
