[metadata]
name = afcost
version = 0.0.1
author = Richard Wheeler
author_email = richardwheeler@outlook.com
description = Alignment-Free Kmer COmposition Search Tool
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src